finished the mobile view

--- a/index.html
+++ b/index.html
@@ -3,29 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mass's Portfolio</title>
-    <!-- Include Tailwind CSS (if used) -->
+    <title>Anees's Portfolio</title>
     <link rel="stylesheet" href="styles/output.css">
     <link rel="stylesheet" href="/main.css">
 </head>
 <body class="bg-white text-black font-sans">
 
-    <!-- Header -->
-    <header class="text-center my-10">
-        <h1 class="text-3xl font-bold">
+    <header class="header">
+        <h1>
             Hey, I'm <img class="anees_image" src="image/assets/A.portfolio.png" alt="Anees portfolio">  Anees <br>
               a <span class="text-pink-500">Software developer</span> keen on <br>
               frontend and backend development
         </h1>
-        <div class="mt-3 space-x-4">
+        <div>
             <a href="#" class=" underline">Twitter</a>
             <a href="#" class=" underline">LinkedIn</a>
         </div>
-        <button class="bg-black text-white px-4 py-2 mt-4 rounded">Contact</button>
-        <span class="ml-3 text-green-500">Available for work</span>
+        <button>Contact</button>
+        <span>Available for work</span>
     </header>
 
-    <!-- About Section -->
     <section class="first-section">
         <div>
             <p>
@@ -40,8 +37,6 @@
 <img src="image/assets/code.JPG" alt="">
        </div>
     </section>
-
-    <!-- Work Section -->
     <section  >
         <h2 class="text-xl font-semibold mb-4">Works</h2>
         <ul class="works">
@@ -89,27 +84,26 @@
          </ul>
      
     </section>
-
-    <!-- Tech Stack -->
-    <section class="max-w-5xl mx-auto p-4">
-        <h2 class="text-xl font-semibold mb-4">Tech Stack</h2>
-        <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-            <div><strong>Language:</strong> JavaScript</div>
-            <div><strong>Framework:</strong> ReactJS || expressjs</div>
-            <div><strong>Database:</strong> MongoDb</div>
+    <section>
+        <h2 >Tech Stack</h2>
+        <div >
+            <div><strong>Language:</strong> JavaScript || Dart</div>
+            <div><strong>Framework:</strong> ReactJS || expressjs || flutter</div>
+            <div><strong>Database:</strong> MongoDb || SQL</div>
             <div><strong>SSR:</strong> NextJS</div>
             <div><strong>CSS:</strong> Tailwind CSS</div>
-            <div><strong>Tools:</strong> Figma & Framer</div>
         </div>
     </section>
-
-    <!-- Contact Section -->
-    <footer class="text-center my-10">
-        <h2 class="text-2xl font-semibold">Let's work together</h2>
-        <p>
-            <a href="mailto:info@mass.com" class="text-blue-500 underline">ayomideanees2003@gmail.com</a> | 
-            <span>+224 8121298992</span>
-        </p>
+    <footer>
+        <div>
+            <h2 class="text-pink-500 ">Let's work together</h2>
+            <p>
+                <a href="">ayomideanees2003@gmail.com</a>
+                <span>+224 8121298992</span>
+            </p> 
+        </div>
+      
+        <img src="image/assets/A.portfolio.png"  alt="">
     </footer>
 
 </body>
